--- a/style.css
+++ b/style.css
@@ -118,68 +118,4 @@
 }
 
 .shadow {
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
-
-/* Flexbox Layout */
-.konten {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.konten.tengah {
-    justify-content: center;
-    align-items: center;
-}
-
-/* Countdown Timer */
-#countdowna {
-    color: var(--merah);
-    font-family: 'Roboto', Sans-serif;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: bolder;
-    font-size: 2em;
-}
-
-.count {
-    display: inline-block;
-    font-size: 16px;
-    margin: 40px 5px 5px 5px;
-    color: #333;
-}
-
-.count span {
-    font-size: 6em;
-    background: rgba(255, 255, 255, 0.75);
-    color: #333;
-    border-radius: 5px;
-    padding: 0 10px 20px 10px;
-    text-shadow: 0px 10px 20px rgba(0, 0, 0, 0.36);
-}
-
-@media (max-width: 700px) {
-    .count {
-        font-size: 12px;
-        margin: 20px 5px 5px 5px;
-    }
-
-    .count span {
-        font-size: 4em;
-        padding: 0 8px;
-    }
-}
-
-/* Responsive Adjustments */
-@media (max-width: 700px) {
-    .kol-13, .kol-12 {
-        width: 100%;
-    }
-
-    .btn-besar {
-        font-size: 1em;
-        padding: 12px 30px;
-    }
-}
+    box-shadow: 0 4px 10px rgba(0, 
